--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -1,4 +1,11 @@
 * xref:con_pipelines-concepts.adoc[1. Pipelines concepts]
+** xref:con_pipeline-task.adoc[1.1 Task]
+*** xref:con_pipeline-tasks-syntax.adoc[1.1.1 Task syntax]
+** xref:con-pipeline-resource-types.adoc[1.2 Pipeline Resource types]
+*** xref:con_pipeline-git-resources.adoc[1.2.1 Git resources]
+*** xref:con_pipeline-pull-request-resources.adoc[1.2.2 Pull Request resources]
+*** xref:con_pipeline-image-resources.adoc[1.2.3 Image resources]
+*** xref:con_pipeline-cluster-resource.adoc[1.2.4 Cluster resources]
 * xref:assembly_installing-pipelines.adoc[2. Installing the Pipelines Operator]
 ** xref:proc_installing-pipelines-operator.adoc[2.1 Installing and updating the Pipelines Operator]
 ** xref:proc_uninstalling-pipelines-operator.adoc[2.2 Uninstalling the Pipelines Operator]
