--- a/modules/ROOT/pages/con_pipeline-cluster-resource.adoc
+++ b/modules/ROOT/pages/con_pipeline-cluster-resource.adoc
@@ -1,34 +1,32 @@
-[]
-= Cluster Resource
+[id='pipeline-cluster-resource_{context}']
+= Cluster resource
 
+A Cluster resource represents a cluster other than the one Pipelines is currently running on. This resource allows users to deploy applications or functions on different clusters.
 
-A Cluster Resource represents a Kubernetes cluster other than the current cluster Pipelines is running on. A common use case for this resource is to deploy your application or function on different clusters.
-
-The resource will use the provided parameters to create a
-[kubeconfig](https://kubernetes.io/docs/tasks/access-application-cluster/configure-access-multiple-clusters/)
+The resource uses the provided parameters to create a link:(https://kubernetes.io/docs/tasks/access-application-cluster/configure-access-multiple-clusters/)[kubeconfig]
 file that can be used by other steps in the pipeline task to access the target
-cluster. The kubeconfig will be placed in `/workspace/<your-cluster-name>/kubeconfig` on your Task container
+cluster. The kubeconfig file is placed in `/workspace/<your-cluster-name>/kubeconfig` on your `Task` container.
 
 The Cluster resource has the following parameters:
 
-* Required:
-*  `name` (required): The name to be given to the target cluster, will be used
-    in the kubeconfig and also as part of the path to the kubeconfig file
-*   `url` (required): Host url of the master node
-*   `username` (required): the user with access to the cluster
-*   `password`: to be used for clusters with basic auth
-*   `token`: to be used for authentication, if present will be used ahead of the
-    password
-*   `insecure`: to indicate server should be accessed without verifying the TLS
-    certificate.
-*   `cadata` (required): holds PEM-encoded bytes. This is typically read from       a root certificates bundle).
+*Required*:
+* `name`: The name to be given to the target cluster, will be used in the kubeconfig file and also as part of the path to the kubeconfig file.
+* `URL`: Host URL of the master node.
+* `username`: The user with access to the cluster.
+* `cadata`: Holds PEM-encoded bytes and is typically read from a root certificate bundle.
+
+_Optional_:
+* `password`: To be used for clusters with basic auth
+* `token`: Used for authentication. If present it is used ahead of the password.
+* `insecure`: Indicates whether the server should be accessed without verifying the TLS certificate.
+
 
 [NOTE]
 ====
-Since only one authentication technique is allowed per user, either a `token` or a `password` should be provided, if both are provided, the `password` will be ignored.
+Only one authentication technique is allowed per user; either a `token` or a `password` should be provided. If both are provided, the `password` will be ignored.
 ====
 
-The following example shows the syntax and structure of a Cluster Resource:
+The following example displays the syntax and structure of a Cluster resource:
 
 [source]
 ----
@@ -39,7 +37,7 @@ metadata:
 spec:
   type: cluster
   params:
-    - name: url
+    - name: URL
       value: https://10.10.10.10 # url to the cluster master node
     - name: cadata
       value: LS0tLS1CRUdJTiBDRVJ.....
