--- a/modules/ROOT/pages/con_pipeline-git-resources.adoc
+++ b/modules/ROOT/pages/con_pipeline-git-resources.adoc
@@ -1,84 +1,75 @@
-[]
-= Git Resource
+[id='pipeline-git-resource_{context}']
+= Git resource
 
-Git resource represents a [git](https://git-scm.com/) repository, that contains
-the source code to be built by the pipeline. Adding the git resource as an input
-to a Task will clone this repository and allow the Task to perform the required
-actions on the contents of the repo.
+A Git resource represents a link:https://git-scm.com/)[Git] repository, that contains
+the source code to be built by the pipeline. Adding the Git resource as an input
+to a `Task` clones the repository and allows the `Task` to perform the required
+actions.
 
-To create a git resource using the `PipelineResource` CRD:
+To create a Git resource using the `PipelineResource` CRD, use the following as an example:
 
 [source]
 ----
 apiVersion: tekton.dev/v1alpha1
 kind: PipelineResource
 metadata:
-  name: wizzbang-git
+  name: sample_name
   namespace: default
 spec:
   type: git
   params:
-    - name: url
-      value: https://github.com/wizzbangcorp/wizzbang.git
+    - name: URL
+      value: https://github.com/URL_address.git
     - name: revision
       value: master
 ----
 
 The following resources can be added:
 
-* `url`: represents the location of the git repository, you can use this to
-    change the repo
+* `URL`: represents the location of the Git repository. You can use this to change the repository.
 
-* `revision`: Git
-    [revision](https://git-scm.com/docs/gitrevisions#_specifying_revisions)
-    (branch, tag, commit SHA or ref) to clone. You can use this to control what
-    commit or branch is used. If a revision is not specified,
-    the resource will default to `latest` from `master`.
+* `revision`: You can use Git link:https://git-scm.com/docs/gitrevisions#_specifying_revisions[revision] to control which commit or branch is used. If a revision is not specified, the resource will default to `latest` from `master`.
 
 
 == Using a fork
 
-The `Url` parameter can be used to point at any git repository, for example to
-use a GitHub fork at master:
+The `URL` parameter can be used to point to any Git repository. The following example uses a GitHub fork at `master`:
 
 [source]
 ----
 spec:
   type: git
   params:
-    - name: url
-      value: https://github.com/bobcatfish/wizzbang.git
+    - name: URL
+      value: https://github.com/URL_address.git
 ----
 
 
 == Using a branch
 
-The `revision` can be any
-[git commit-ish (revision)](https://git-scm.com/docs/gitrevisions#_specifying_revisions).
-You can use this to create a git `PipelineResource` that points at a branch, for
-example:
+You can use a `revision` to create a Git `PipelineResource` that points to a branch. The following is an example:
 
 [source]
 ----
 spec:
   type: git
   params:
-    - name: url
-      value: https://github.com/wizzbangcorp/wizzbang.git
+    - name: URL
+      value: https://github.com/URL_address.git
     - name: revision
-      value: some_awesome_feature
+      value: branch_name
 ----
 
-To point at a pull request, you can use
-[the pull requests's branch](https://help.github.com/articles/checking-out-pull-requests-locally/):
+To point to a pull request, you can use
+link:https://help.github.com/articles/checking-out-pull-requests-locally/[the pull requests's branch] and reference number:
 
 [source]
 ----
 spec:
   type: git
   params:
-    - name: url
-      value: https://github.com/wizzbangcorp/wizzbang.git
+    - name: URL
+      value: https://github.com/URL_address.git
     - name: revision
-      value: refs/pull/52525/head
+      value: refs/pull/1111/head
 ----
