--- a/modules/ROOT/pages/proc_uninstalling-pipelines-operator.adoc
+++ b/modules/ROOT/pages/proc_uninstalling-pipelines-operator.adoc
@@ -1,5 +1,7 @@
 [id='deleting-the-projects-and-uninstalling-the-pipelines-operator_{context}']
-= Deleting the project and uninstalling the pipelines operator
+= Uninstalling the pipelines operator and the custom resource
+
+////
 
 == Deleting the Project
 
@@ -19,22 +21,35 @@
 . Click **Delete**.
 
 . The project is now deleted from the **Projects** list and cluster.
+////
 
+To uninstall pipelines you need to first delete the pipeline configuration custom resource and then uninstall the pipeline operator. Deleting the Pipelines operator will not delete all the custom resources created by default when the operator is installed.
+
+== Uninstalling the pipeline configuration custom resource
+
+[discrete]
+.Procedure
+
+Uninstall the custom resource, created by default when you install the Pipelines Operator, as follows:
+
+. In the *Administrator* perspective of the Web Console, navigate to *Operators > Installed Operators*.
+. In the *Project* drop-down select the *OpenShift- Operators* project.
+. Click on the *OpenShift Pipelines Operator* to see the overview of the operator.
+. Click on the *OpenShift Pipelines config* tab to see the *Configs* screen.
+. Click the *Options* menu {kebab} adjacent to the *cluster* config listed in the *Configs* screen, and select *Delete Config*.
+. Click *Delete* to confirm the deletion of the custom resource.
 
 
 == Uninstalling the pipelines operator
+To uninstall the Pipelines operator, follow these steps:
 
 [discrete]
-=== Procedure
+.Procedure
 
-. Go to **Catalog > OperatorHub** in the Web Console.
+. From the *Operators > OperatorHub* page, use the *Filter by keyword* box to search for OpenShift Pipelines Operator.
 
-. Click on the **OpenShift Pipelines Operator** tile. The operator tile will indicate it is installed.
+. Click on the *OpenShift Pipelines Operator* tile. The operator tile indicates it is installed.
 
-. The **Show Community Operator**` dialog box will appear. Click **Continue** to proceed.
+. In the *OpenShift Pipelines Operator* descriptor screen, click **Uninstall**.
 
-. Once, the **OpenShift Pipelines Operator** descriptor screen appears, click **Uninstall**.
-
-. Select **Also completely remove the Operator from the selected namespace**, in the **Remove Operator Subscription** dialog box.
-
-. Click **Remove**.
+. In the *Remove Operator Subscription* dialog box, ensure that the *Also completely remove the Operator from the selected namespace* is selected, and click *Remove*.
