--- a/modules/ROOT/pages/proc_triggering-and-running-a-pipeline.adoc
+++ b/modules/ROOT/pages/proc_triggering-and-running-a-pipeline.adoc
@@ -25,6 +25,16 @@ Pipelinerun started: petclinic-deploy-pipeline-run-q62p8
 * The `-r` flag specifies the `PipelineResource` s that should be provided to the pipeline
 * The `-s` flag specifies the service account to be used for running the pipeline
 +
+[NOTE]
+====
+Note: OpenShift Pipelines 0.7 does not automatically use the pipeline service account for running pipelineruns. This has been fixed in the OpenShift Pipelines 0.8 release. If you want to use the OpenShift Console developer perspective to start the pipeline with OpenShift Pipelines 0.7, run the following commands to elevate the permissions of the default service account used for running pipelineruns that are started by the OpenShift Console, as follows:
+----
+$ oc create serviceaccount pipeline
+$ oc adm policy add-scc-to-user privileged -z pipeline
+$ oc adm policy add-role-to-user edit -z pipeline
+----
+====
++
 Starting a pipeline instantiates the `PipelineRun` and creates a number of pods to execute the tasks that are defined in the pipeline. The `PipelineRun` automatically creates and triggers the `TaskRuns` for each `Task` in the pipeline.
 
 . After a few minutes, verify that the `Pipeline` ran successfully by listing all the `PipelineRuns` as follows:
