Added releasenotes docs to the nav.adoc file

--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -18,5 +18,4 @@
 * xref:assembly_cli_reference.adoc[4. CLI Reference]
 ** xref:proc_installing_cli.adoc[4.1 Installing CLI]
 ** xref:ref_cli_reference.adoc[4.2 Basic Commands]
-
-
+* xref:release_notes_0.7.adoc[Release Notes]
