--- a/modules/ROOT/pages/index.adoc
+++ b/modules/ROOT/pages/index.adoc
@@ -20,7 +20,7 @@ OpenShift Pipelines are cloud-native, continuous integration and delivery soluti
 
 == Additional resources
 
-* For more details on defining pipelines, see the link:https://openshift.github.io/pipelines-docs/docs/docs/assembly_using-pipelines.html[Using Pipelines documentation].
+* For more details on defining pipelines, see the link:https://openshift.github.io/pipelines-docs/docs/docs/0.7/assembly_using-pipelines.html[Using Pipelines documentation].
 * For more information on Tekton see the link:https://github.com/tektoncd[Tekton Pipelines documentation].
 * Visit our link:https://github.com/openshift/pipelines-docs[GitHub] repository for more information or to contribute.
 
