Installing via YAML

--- a/modules/ROOT/pages/assembly_installing-pipelines.adoc
+++ b/modules/ROOT/pages/assembly_installing-pipelines.adoc
@@ -9,6 +9,8 @@ The following section describes how to install and uninstall OpenShift Pipelines
 
 include::proc_installing-pipelines-operator.adoc[leveloffset=+1]
 
+include::proc_installing-pipelines-operator-via-yaml.adoc[leveloffset=+1]
+
 include::proc_uninstalling-pipelines-operator.adoc[leveloffset=+1]
 
 
