--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -16,7 +16,7 @@
 ** xref:proc_triggering-and-running-a-pipeline.adoc[3.5 Triggering and running a pipeline]
 ** xref:proc_checking-pipeline-and-application-status.adoc[3.6 Checking pipeline and application status]
 ** xref:proc_working-with-pipelines-using-developer-perspective.adoc[3.7 Working with pipelines using the developer console]
-* xref:assembly_cli_reference.adoc[4. CLI Reference]
-** xref:proc_installing_cli.adoc[4.1 Installing CLI]
-** xref:ref_cli_reference.adoc[4.2 Basic Commands]
+* xref:assembly_cli-reference.adoc[4. CLI Reference]
+** xref:proc_installing-cli.adoc[4.1 Installing CLI]
+** xref:ref_cli-reference.adoc[4.2 Basic Commands]
 * xref:release_notes_0.7.adoc[Release Notes]
