Rephrased the last sentence.

--- a/modules/ROOT/pages/proc_installing-pipelines-operator-via-yaml.adoc
+++ b/modules/ROOT/pages/proc_installing-pipelines-operator-via-yaml.adoc
@@ -37,4 +37,4 @@ spec:
 $ oc apply -f sub.yaml
 ----
 +
-Openshift Pipelines are now installed in the target namespace.
+Openshift Pipelines are now installed in the default target namespace `openshift-pipelines`.
