Update and rename release_notes_0.7.adoc to release_notes_0.8.adoc

--- a/modules/ROOT/pages/release_notes_0.8.adoc
+++ b/modules/ROOT/pages/release_notes_0.8.adoc
@@ -1,6 +1,6 @@
 [id="openshift-pipelines-release-notes"]
-= Openshift Pipelines 0.7 Developer Preview Release Notes
-:context: openshift-pipelines-release-notes-0.7
+= Release Notes for Openshift Pipelines 0.8 Developer Preview 
+:context: openshift-pipelines-release-notes-0.8
 
 
 OpenShift Pipelines is a cloud-native CI/CD experience based on the Tekton project, which provides:
