--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -6,8 +6,9 @@
 *** xref:con_pipeline-image-resources.adoc[1.2.3 Image resources]
 *** xref:con_pipeline-cluster-resource.adoc[1.2.4 Cluster resources]
 * xref:assembly_installing-pipelines.adoc[2. Installing the Pipelines Operator]
-** xref:proc_installing-pipelines-operator.adoc[2.1 Installing and updating the Pipelines Operator]
-** xref:proc_uninstalling-pipelines-operator.adoc[2.2 Uninstalling the Pipelines Operator]
+** xref:proc_installing-pipelines-operator-in-web-console.adoc[2.1 Installing the Pipelines Operator in the Web Console]
+** xref:proc_installing-pipelines-operator-using-the-cli.adoc[2.2 Installing the Pipelines Operator using the CLI]
+** xref:proc_uninstalling-pipelines-operator.adoc[2.3 Uninstalling the Pipelines Operator]
 * xref:assembly_using-pipelines.adoc[3. Using Pipelines]
 ** xref:proc_deploying-an-application-to-openshift.adoc[3.1 Deploying an application to OpenShift]
 ** xref:proc_defining-and-creating-pipeline-tasks.adoc[3.2 Defining and creating pipeline tasks]
@@ -19,4 +20,4 @@
 * xref:assembly_cli-reference.adoc[4. CLI Reference]
 ** xref:proc_installing-cli.adoc[4.1 Installing CLI]
 ** xref:ref_cli-reference.adoc[4.2 Basic Commands]
-* xref:release_notes_0.7.adoc[Release Notes]
+* xref:release_notes_0.8.adoc[Release Notes]
