changed screenshot in the deployment module

--- a/modules/ROOT/pages/proc_deploying-an-application-to-openshift.adoc
+++ b/modules/ROOT/pages/proc_deploying-an-application-to-openshift.adoc
@@ -58,4 +58,4 @@ $ oc get serviceaccount pipeline
 
 . Select the `pipelines-tutorial` project from the *Project* dropdown menu. On the *Topology* view of the *Developer* perspective, you will be able to see the resources of your Pipeline. The deployment at this stage is not complete. The `Pipeline` you create in the next steps builds the simple application which has a frontend and a backend and completes the deployment.
 +
-image::initiate_deployment.png[Initiate deployment]
+image::application-deployed.png[Application Deployed]
